source/components/select/style.scss
@use "../../sass/mixin/focus";
@use "../../sass/mixin/tokens";

$_: "c-select";

@include tokens.create($_, getComponentTokens($_),
    ("font-size-btn-sm": tokens.get($_, "font-size-80"),
        "font-size-btn-md": tokens.get($_, "font-size-90"),
        "font-size-btn-lg": tokens.get($_, "font-size-100"),
    ));

.#{$_}__container {
    position: relative;
}

.#{$_} {
    position: relative;

    .#{$_}__select-element {
        bottom: 0;
        height: 1px;
        left: 0;
        outline: none;
        opacity: 0;
        position: absolute;
        width: 1px;
    }

    .#{$_}__action-overlay {
        cursor: pointer;
        z-index: 4000;
        white-space: nowrap;
        text-overflow: ellipsis;
        max-width: 100%;
        overflow: hidden;
        padding-right: 15%;
    }

    .#{$_}__search-field {
        animation: c-select-dropdown-expand 0.5s cubic-bezier(0.175, 0.885, 0.320, 1.275) both;
        background-color: tokens.get($_, "color--surface");
        border: var(--border-width-input, 1px) solid tokens.get($_, "color--surface-border");
        border-left: none;
        border-right: none;
        border-top: none;
        padding: tokens.use($_, "base", 1);
        padding-top: 0;
    }

    .#{$_}__search-no-results {
        color: tokens.get($_, "color--surface-contrast-muted");
        display: none;
        padding: tokens.use($_, "base", 2) tokens.use($_, "base", 1.75);
        text-align: center;
    }

    &.search-no-results .#{$_}__search-no-results {
        display: block;
    }

    &.is-empty .#{$_}__action-overlay {
        color: tokens.get($_, "color--surface-contrast-muted");
    }

    &.is-ios,
    &.is-android {
        select {
            display: block;
            height: 100%;
            position: absolute;
            width: 100%;
            z-index: 5000;
        }
    }

    .#{$_}__clear-button {
        position: absolute;
        right: 2em;
        top: 0;
        left: auto;
        padding: tokens.use($_, "base", 2);
        z-index: 6000;
        height: 100%;
        color: tokens.get($_, "color--primary");
        display: flex;
        align-items: center;

        &[aria-hidden="true"] {
            display: none;
        }
    }

    .#{$_}__expand-button {
        position: absolute;
        right: 0;
        top: 0;
        left: auto;
        padding: tokens.use($_, "base", 2);
        z-index: 2000;
        transition: none;
        height: 100%;
        color: tokens.get($_, "color--primary");
        pointer-events: none;
        display: flex;
        align-items: center;

        .#{$_}__expand-more-icon {
            animation: c-select-expand-rotate 200ms cubic-bezier(0.470, 0.000, 0.745, 0.715) both;
        }

        .#{$_}__expand-less-icon {
            animation: c-select-expand-rotate-inverted 200ms cubic-bezier(0.470, 0.000, 0.745, 0.715) both;
        }

        .#{$_}__expand-less-icon {
            display: none;
        }
    }

    &.#{$_}--rounded {
        select {
            border-radius: tokens.use($_, "base", 3);
            border: none;
            font-weight: 700;
        }

        .c-field__label {
            margin-left: tokens.use($_, "base", 2);
        }

        &.#{$_}--rounded-border {
            select {
                border: var(--c-field--border-width) solid var(--c-field--border-color);
            }
        }
    }

    .#{$_}__dropdown .#{$_}__option[aria-disabled="true"] {

        .c-icon {
            color: tokens.get($_, "color--surface-border");
        }

        .#{$_}__option-label {
            color: tokens.get($_, "color--surface-contrast-muted");
            font-style: italic;
        }
    }

    /* Size modifiers */
    &.#{$_}--sm {

        .#{$_}__clear-button,
        .#{$_}__expand-button {
            padding: 0 tokens.use($_, "base", 1);
        }

        .#{$_}__clear-button {
            font-size: tokens.get($_, "font-size-btn-sm");
            line-height: tokens.use($_, "base", 1.5);
        }

        .#{$_}__clear-button .c-icon {
            font-size: 1.5em
        }

        .#{$_}__dropdown .#{$_}__option {
            padding: tokens.use($_, "base", 0.75) tokens.use($_, "base", 1.5);
        }
    }

    &.#{$_}--md {

        .#{$_}__clear-button,
        .#{$_}__expand-button {
            padding: 0 tokens.use($_, "base", 2);
        }

        .#{$_}__clear-button {
            font-size: tokens.get($_, "font-size-btn-md");
            line-height: tokens.use($_, "base", 2);
        }

        .#{$_}__clear-button .c-icon {
            font-size: 1.5em
        }

        .#{$_}__dropdown .#{$_}__option {
            padding: tokens.use($_, "base", 1) tokens.use($_, "base", 1.75);
        }
    }

    &.#{$_}--lg {

        .#{$_}__clear-button,
        .#{$_}__expand-button {
            padding: 0 tokens.use($_, "base", 2.5);
        }

        .#{$_}__clear-button {
            font-size: tokens.get($_, "font-size-btn-lg");
            line-height: tokens.use($_, "base", 2);
        }

        .#{$_}__clear-button .c-icon {
            font-size: 1.5em
        }

        .#{$_}__dropdown .#{$_}__option {
            padding: tokens.use($_, "base", 1.5) tokens.use($_, "base", 2.5);
        }
    }

    .error.active {
        padding: 0.3rem;
    }

    .#{$_}__select-invalid-message {
        width: 100%;
        padding: tokens.use($_, "base", 1);
        display: none;
        font-size: 80%;
        color: tokens.get($_, "color--danger-contrast");
        background-color: tokens.get($_, "color--danger");
        border: none;
        border-radius: 0 0 tokens.use($_, "border-radius", 0.25) tokens.use($_, "border-radius", 0.25);
        box-sizing: border-box;

        &.error {
            display: block;
            transition: ease-in-out .3s;
        }

        .c-icon {
            position: relative;
            top: 3px;
        }
    }

    .#{$_}__field-container {
        position: relative;
        line-height: 0;

        &:focus-within {
            @include focus.focus();
        }
    }

    /* States */
    &.is-invalid {
        .#{$_} {

            &,
            &:focus,
            &:active {
                border-color: tokens.get($_, "color--danger");
            }
        }

        .c-field__helper {
            color: tokens.get($_, "color--danger");
        }
    }

    &.is-valid {
        .#{$_} {

            &,
            &:focus,
            &:active {
                border-color: tokens.get($_, "color--success");
            }
        }

        .c-field__helper {
            color: tokens.get($_, "color--success");
        }
    }

    &.is-open {

        .#{$_}__dropdown {
            z-index: 8000;
            display: block;
            border-top: none;
            border-top-left-radius: 0;
            border-top-right-radius: 0;
        }

        .#{$_}__expand-button {
            .#{$_}__expand-more-icon {
                display: none;
            }

            .#{$_}__expand-less-icon {
                display: flex;
            }
        }
    }

    .#{$_}__dropdown {
        animation: c-select-dropdown-expand 0.5s cubic-bezier(0.175, 0.885, 0.320, 1.275) both;
        display: none;
        background-color: tokens.get($_, "color--surface");
        position: absolute;
        top: 100%;
        width: 100%;
        max-height: tokens.use($_, "base", 30);
        overflow-y: auto;
        z-index: 3000;
        padding: tokens.use($_, "base", 1) 0;
        border: var(--border-width-input, 1px) solid tokens.get($_, "color--surface-border");
    }

    .#{$_}__option {
        display: flex;
        gap: tokens.use($_, "base", 1.5);
        padding: tokens.use($_, "base", 1.5) tokens.use($_, "base", 2);
        align-items: center;
        cursor: pointer;
        user-select: none;
        margin-top: 0;

        &:hover {
            background-color: rgba(#000, .2);
        }

        .#{$_}__option-icon {
            animation: c-select-option-puff 100ms cubic-bezier(0.470, 0.000, 0.745, 0.715) both;
        }

        .#{$_}__checked-icon {
            display: none;
        }

        &.is-selected {
            .#{$_}__unchecked-icon {
                display: none;
            }

            .#{$_}__checked-icon {
                display: block;
            }
        }

        &.is-disabled {
            opacity: .4;
        }
    }

    .#{$_}__option {
        .#{$_}__option-label {
            transition: transform 400ms;
        }

        .#{$_}__option-icon {
            transition: transform 300ms;
        }

        &:hover {

            .#{$_}__option-label,
            .#{$_}__option-icon {
                transform: translateX(tokens.use($_, "base", 0.5));
            }
        }
    }

}

@keyframes c-select-dropdown-expand {
    0% {
        transform-origin: top;
        opacity: 0;
    }

    100% {
        transform: rotateX(0deg);
        transform-origin: top;
        opacity: 1;
    }
}

@keyframes c-select-option-puff {
    0% {
        filter: blur(4px);
        opacity: 0;
    }

    100% {
        filter: blur(0px);
        opacity: 1;
    }
}

@keyframes c-select-expand-rotate {
    0% {
        transform: rotate(180deg);
    }

    100% {
        transform: rotate(0deg);
    }
}

@keyframes c-select-expand-rotate-inverted {
    0% {
        transform: rotate(-180deg);
    }

    100% {
        transform: rotate(0deg);
    }
}

